Upgrade to Java 21 and Gradle 8.5
Phase 1: Gradle and Build Configuration
- Upgrade Gradle wrapper from 6.3 to 8.5
- Remove deprecated 'maven' plugin (removed in Gradle 7+)
- Remove deprecated 'uploadArchives' task
- Update Shadow plugin to 8.3.0 (com.gradleup.shadow)
- Update JFrog plugin to 5.2.0
- Update node-gradle plugin to 7.0.1
- Migrate compile/testCompile to implementation/api/testImplementation
- Update classifier to archiveClassifier, baseName to archiveBaseName
- Update Java version settings to 21
- Fix task dependencies for fatJar tasks
- Add duplicatesStrategy to Copy/Jar tasks

Phase 2: Code Changes for JDK Compatibility
- Replace javax.xml.bind.DatatypeConverter with java.util.Base64
- Replace Class.newInstance() with getDeclaredConstructor().newInstance()

Build verified with Java 21 (21.0.9) and Gradle 8.5

Co-Authored-By: johnny.vaquiz@gmail.com <johnny.vaquiz@gmail.com>